# open-entities

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md  ideas.md
.serena/: project.yml
js-app/: index.html  package.json  vite.config.js
js-app/src/: main.js
open-entities-lib/: Cargo.toml
open-entities-lib/src/: lib.rs  systems.rs
open-entities-lib/src/components/: mod.rs  position.rs  unit.rs  vehicle.rs  velocity.rs  yaml.rs
src/: lib.rs  systems.rs
src/components/: position.rs  velocity.rs
tests/: integration_tests.rs
wasm-bindings/: Cargo.toml
wasm-bindings/src/: lib.rs
