[package]
name = "open-entities"
version = "0.1.0"
edition = "2021"
description = "A library for working with entities using the bevy_ecs framework"
license = "MIT"
authors = ["OpenEntities Contributors"]

[dependencies]
bevy_ecs = "0.14"
bevy_app = "0.14"

[[test]]
name = "integration_tests"
path = "tests/integration_tests.rs"

[lib]
name = "open_entities"
path = "src/lib.rs"
